--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,20 +17,21 @@
         height: 10px;
         margin: 0;
         gap: 25px;
+        height: 30px;
         width: 60%;
         margin-left: 40%;
     }
-    nav .content a{
+    nav .content p{
         font-size: 1rem;
-        margin-top: -.3rem;
+        margin-top: .3rem;
     }
     
-    nav .content a::after{
-        margin-top: 1.45rem;
+    nav .content p.selected::after{
+        margin-top: 1.5rem;
         height: 2px;
     }
     
-    nav .content a:hover::after{
+    nav .content p:hover::after{
         display: none;
     }
 
@@ -53,7 +54,7 @@
         margin-inline: 20px;
         margin-top: -25px;
     }
-    .developer-info h3 {
+     h3.developer-info {
         display: none;
     }
     .developer-info h4 {
@@ -66,7 +67,7 @@
         margin-left: -35px;
     }
     .developer-info img {
-        max-width: 90%;
+        max-width:90%;
     }
     .logos{
         gap: 5%;
@@ -74,5 +75,17 @@
     .logos img{
         border-radius: 15px;
         max-width: 50px !important;
+    }
+    #section-3 .img img{
+        max-width: 50px;
+        max-height: 50px;
+    }
+    .logo-img {
+        max-width:75px !important; /* Puoi modificare la dimensione in base alle tue preferenze */
+    }
+    h4.tag{
+        font-size: 12px;
+        text-align: center;
+        opacity: .75;
     }
 }
